# cognee-rs

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  E2E_TEST_PORTABILITY_ANALYSIS.md  PARITY_ANALYSIS.md  README.md  SECURITY.md  build.rs  cliff.toml  cspell.json  release-plz.toml
capi/: .gitignore  CMakeLists.txt  Cargo.toml  Cross.toml  README.md
capi/cognee-capi/: Cargo.toml  build.rs  cbindgen.toml
capi/cognee-capi/src/: cancellation.rs  error.rs  exec_status.rs  iterator.rs  lib.rs  logging.rs  panic_hook.rs  pipeline.rs  pipeline_exec.rs  progress.rs  run_handle.rs  runtime.rs  sdk.rs  sdk_admin.rs  sdk_cloud.rs  sdk_config.rs  sdk_data.rs  sdk_datasets.rs  sdk_memory.rs  sdk_ops.rs  sdk_retrieval.rs  sdk_visualization.rs  task.rs  task_context.rs  task_info.rs  telemetry_analytics.rs  telemetry_otlp.rs  thread_pool.rs  util.rs  value.rs  watcher.rs
capi/examples/: CMakeLists.txt  common.h  example_async_task.c  example_background_task.c  example_batch_task.c  example_cancellation.c  example_iter_task.c  example_pipeline.c  example_sdk_add.c  example_sdk_add_cognify.c  example_sdk_add_cognify_search.c  example_sync_task.c  init_otlp_smoke.c  init_telemetry_smoke.c  panic_hook_smoke.c  sdk_config_smoke.c  sdk_conventions_smoke.c  sdk_data_smoke.c  sdk_feature_smoke.c  sdk_handle_smoke.c  sdk_negative_path_smoke.c  sdk_retrieval_smoke.c
capi/include/: cognee.h  cognee_sdk.h  module.modulemap
capi/scripts/: build-release-tarball.sh  build_xcframework.sh  check.sh  check_header_sync.sh  header_sync_allow.txt
crates/bench/: Cargo.toml
crates/bench/benches/: batch_add_cognify.rs
crates/bindings-common/: Cargo.toml  README.md
crates/bindings-common/src/: error.rs  handle.rs  lib.rs  redact.rs  services.rs  wire.rs
crates/chunking/: Cargo.toml  README.md
crates/chunking/src/: chunk_by_paragraph.rs  chunk_by_row.rs  chunk_by_sentence.rs  chunk_by_word.rs  cognify_pipeline.rs  config.rs  cut_type.rs  error.rs  lib.rs  test_inputs.rs  text_chunker.rs  token_counter.rs
crates/chunking/tests/: wasm.rs  wasm_browser.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  config_store.rs  error.rs  lib.rs  main.rs
crates/cli/tests/: cli_bench.rs  cli_e2e.rs  cli_memify.rs  cli_serve_subcommand.rs  logging_e2e.rs
crates/cloud/: Cargo.toml
crates/cloud/src/: cloud_client.rs  config.rs  credentials.rs  device_auth.rs  disconnect.rs  error.rs  lib.rs  management_api.rs  operations.rs  serve.rs  state.rs  sync.rs
crates/cloud/tests/: serve_disconnect_round_trip.rs
crates/cognee-chunking/: Cargo.toml
crates/cognee-chunking/src/: chunk_by_paragraph.rs  chunk_by_sentence.rs  chunk_by_word.rs  cognify_pipeline.rs  lib.rs
crates/cognee-cli/: Cargo.toml
crates/cognee-cli/src/: cli.rs  main.rs
crates/cognee-cli/tests/: cli_e2e.rs
crates/cognee-cognify/: Cargo.toml
crates/cognee-cognify/src/: config.rs  error.rs  lib.rs  pipeline.rs  triplet_creation.rs
crates/cognee-cognify/tests/: integration_embeddings.rs  integration_fact_extraction.rs  integration_incremental_loading.rs
crates/cognee-database/: Cargo.toml
crates/cognee-database/src/: database_trait.rs  lib.rs  mock_database.rs  sqlite_database.rs
crates/cognee-delete/: Cargo.toml
crates/cognee-embedding/: Cargo.toml
crates/cognee-embedding/src/: config.rs  engine.rs  onnx.rs  utils.rs
crates/cognee-embedding/tests/: integration.rs
crates/cognee-graph/: Cargo.toml
crates/cognee-graph/src/: error.rs  ladybug.rs  ladybug_restored_clean.rs  lib.rs  traits.rs  types.rs
crates/cognee-ingestion/: Cargo.toml
crates/cognee-ingestion/src/: content_hasher.rs  lib.rs
crates/cognee-lib/: Cargo.toml
crates/cognee-lib/src/: lib.rs
crates/cognee-llm/: Cargo.toml  README.md
crates/cognee-llm/src/: lib.rs  llm_trait.rs  types.rs
crates/cognee-ontology/: Cargo.toml
crates/cognee-ontology/src/: builder.rs  error.rs  lib.rs  matching.rs  models.rs  noop.rs  rdflib.rs
crates/cognee-ontology/tests/: loader_fixtures_test.rs  noop_test.rs
crates/cognee-search/: Cargo.toml
crates/cognee-search/src/: lib.rs
crates/cognee-storage/: Cargo.toml
crates/cognee-utils/: Cargo.toml
crates/cognee-utils/src/: lib.rs  (+1 more)
crates/cognee-vector/: Cargo.toml
crates/cognify/: Cargo.toml  README.md
crates/components/: Cargo.toml
examples/: Cargo.toml  add_example.rs  cognify_example.rs  data.rs  embedding_engine_example.rs  embeddings.rs  fact_extraction_example.rs  infrastructure.rs  ladybug.rs  llm_fact_extraction.rs  qdrant.rs  simple_example.rs  summarization_example.rs  url_ingestion.rs
examples/examples/: add_example.rs
examples/scripts/: android-build-and-deploy.sh
examples/src/: lib.rs
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/cognee/: __init__.py
python/cognee_pipeline/: __init__.py  __init__.pyi  _native.pyi  compat.py  types.py
python/cognee_py/: __init__.py  __init__.pyi  _native.pyi  compat.py  types.py
python/examples/: add_cognify_search.py  config.py  datasets.py  memify_recall.py  sessions.py  visualize.py
python/scripts/: check.sh
python/src/: cancellation.rs  config.rs  default_subscriber.rs  error.rs  json.rs  lib.rs  logging.rs  pipeline.rs  progress.rs  sdk.rs  sdk_admin.rs  sdk_cloud.rs  sdk_data.rs  sdk_datasets.rs  sdk_error.rs  sdk_memory.rs  sdk_ops.rs  sdk_retrieval.rs  sdk_sessions.rs  sdk_visualization.rs  task.rs  task_context.rs  telemetry_analytics.rs  telemetry_otlp.rs  value.rs  watcher.rs
python/tests/: conftest.py  test_async.py  test_cancellation.py  test_cloud_ops.py  test_compat_api.py  test_config.py  test_core_ops.py  test_data_ops.py  test_dataset_mgmt.py  test_logging_smoke.py  test_memory_ops.py  test_notebook_ops.py  test_pipeline.py  test_progress_subtoken.py  test_pyo3_log_bridge.py  test_retrieval.py  test_sdk_handle.py  test_session_ops.py  test_setup_telemetry_analytics.py  test_setup_telemetry_idempotent.py  test_task_detection.py  test_types_and_stubs.py  test_visualization_ops.py  test_watcher.py  test_watcher_factory.py
(+1752 files in other folders)
