# TODO: Extract capi/cognee-capi into a separate workspace. The C FFI wrapper
# should not live inside the main cognee-rust workspace long-term — it has
# different build requirements (cdylib/staticlib, cbindgen, CMake integration)
# and pulls in testing features unconditionally. Move it to its own workspace
# under capi/ with its own Cargo.toml [workspace] root.
[workspace]
members = [
    "examples",
    "crates/models",
    "crates/storage",
    "crates/database",
    "crates/ingestion",
    "crates/chunking",
    "crates/cognify",
    "crates/core",
    "crates/lib",
    "crates/logging",
    "crates/cli",
    "crates/utils",
    "crates/llm",
    "crates/graph",
    "crates/embedding",
    "crates/vector",
    "crates/ontology",
    "crates/search",
    "crates/session",
    "crates/delete",
    "crates/test-utils",
    "crates/visualization",
    "crates/cloud",
    "crates/http-server",
    # Criterion benchmarks for the Rust HTTP server and pipelines
    "crates/bench",
    "crates/observability",
    "crates/telemetry",

    # TODO: Move this out of the main workspace to avoid pulling in testing features and C FFI dependencies for all members
    "capi/cognee-capi",
    "python",

    # Harness-only binary used by the e2e-cross-sdk telemetry parity
    # test (docs/telemetry/02/10-cross-sdk-parity.md). Source lives at
    # e2e-cross-sdk/bin/telemetry_emit.rs alongside other harness
    # helpers; the manifest is kept in this sibling crate dir so it
    # stays out of the production crates/ tree.
    "e2e-cross-sdk/telemetry-emit",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
assert_cmd = "2.0"
async-trait = "0.1.89"
cognee-litert-lm = { git = "https://github.com/topoteretes/cognee-litert-lm.git" }
calamine = "0.34"
csv = "1.3"
clap = "4.5"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "clock", "std"] }
common = { git = "https://github.com/qdrant/qdrant", package = "common", tag = "v1.17.0" }
dirs = "6"
dotenv = "0.15"
edge = { git = "https://github.com/qdrant/qdrant", package = "edge", default-features = false, tag = "v1.17.0" }
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
lbug = "0.14"
log = "0.4"
mail-parser = "0.11"
mime_guess = "2.0"
ndarray = "0.17"
notify = "6.1"
once_cell = "1"
opentelemetry = { version = "=0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "=0.31", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "=0.31"
opentelemetry_sdk = { version = "=0.31", default-features = false, features = ["trace", "rt-tokio"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray", "cuda", "tensorrt"] }
pbkdf2 = { version = "0.12", default-features = false }
pdf-extract = "0.10"
quick-xml = "0.39"
pdfium-auto = "0.3"
pdfium-render = { version = "0.9", features = ["thread_safe"] }
predicates = "3.1"
rand = "0.8"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "json", "stream", "multipart"] }
scraper = "0.21"
schemars = "0.8"
segment = { git = "https://github.com/qdrant/qdrant", package = "segment", default-features = false, tag = "v1.17.0" }
serde = { version = "1", features = ["derive"] }
serial_test = "3.2"
md-5 = "0.10"
sha2 = "0.10"
sophia = "0.8"
sophia_api = "0.8"
sophia_inmem = "0.8"
sophia_jsonld = "0.8"
sophia_turtle = "0.8"
sophia_xml = "0.8"
sqlx = "0.8"
strsim = "0.11"
thiserror = "2.0"
tiktoken-rs = "0.6"
serde_json = "1"
shard = { git = "https://github.com/qdrant/qdrant", package = "shard", tag = "v1.17.0" }
tempfile = "3"
texting_robots = "0.2"
tokenizers = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "=0.32", default-features = false, features = ["tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[patch.crates-io]
# Align tar version with qdrant workspace (needed for Archive::set_sync)
tar = { git = "https://github.com/qdrant/tar-rs", branch = "main" }
# Required by qdrant v1.17.0 — their forks add http2_max_local_error_reset_streams and related APIs
tonic = { git = "https://github.com/qdrant/tonic", branch = "v0.11.0-qdrant" }
hyper = { git = "https://github.com/qdrant/hyper", branch = "v0.14.26-qdrant" }

[profile.release]
debug = true
