# capi/cognee-capi has been extracted into its own workspace under capi/
# (see capi/Cargo.toml). It is no longer a member of the root workspace
# per decision D10 in docs/capi-bindings/README.md §4.
[workspace]
members = [
    "examples",
    "crates/models",
    "crates/storage",
    "crates/database",
    "crates/ingestion",
    "crates/chunking",
    "crates/cognify",
    "crates/core",
    "crates/lib",
    "crates/logging",
    "crates/cli",
    "crates/utils",
    "crates/llm",
    "crates/graph",
    "crates/embedding",
    "crates/vector",
    "crates/ontology",
    "crates/search",
    "crates/session",
    "crates/delete",
    "crates/test-utils",
    "crates/visualization",
    "crates/http-server",
    # Criterion benchmarks for the Rust HTTP server and pipelines
    "crates/bench",
    "crates/observability",
    "crates/telemetry",
    "python",

    # Harness-only binary used by the e2e-cross-sdk telemetry parity
    # test (docs/telemetry/02/10-cross-sdk-parity.md). Source lives at
    # e2e-cross-sdk/bin/telemetry_emit.rs alongside other harness
    # helpers; the manifest is kept in this sibling crate dir so it
    # stays out of the production crates/ tree.
    "e2e-cross-sdk/telemetry-emit",

    # Shared SDK facade (HandleState, CogneeServices, SdkError, wire helpers)
    # consumed by both the Neon JS binding and the C API binding (decision D1).
    "crates/bindings-common",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.1"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["Topoteretes <support@cognee.ai>"]
description = "Rust port of cognee — an AI memory pipeline that turns raw data into queryable knowledge graphs."
repository = "https://github.com/topoteretes/cognee-rs"
homepage = "https://www.cognee.ai"
readme = "README.md"
keywords = ["ai", "knowledge-graph", "memory", "rag", "embeddings"]
categories = ["science", "database", "text-processing"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
assert_cmd = "2.0"
async-trait = "0.1.89"
calamine = "0.34"
csv = "1.3"
clap = "4.5"
chrono = { version = "0.4.41", default-features = false, features = ["serde", "clock", "std"] }
# Pin time to last known-good version: 0.3.47 breaks sea-query and lbug (E0119
# conflicting From impls). Exact pin forces the whole dep graph to 0.3.46 until
# upstream crates release fixes.
time = "=0.3.46"
dirs = "6"
dotenv = "0.15"
env_logger = "0.11"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
lbug = "0.14"
log = "0.4"
mail-parser = "0.11"
mime_guess = "2.0"
ndarray = "0.17"
notify = "6.1"
once_cell = "1"
opentelemetry = { version = "=0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "=0.31", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "=0.31"
opentelemetry_sdk = { version = "=0.31", default-features = false, features = ["trace", "rt-tokio"] }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
pbkdf2 = { version = "0.12", default-features = false }
pdf-extract = "0.10"
quick-xml = "0.39"
pdfium-auto = "0.3"
pdfium-render = { version = "0.9", features = ["thread_safe"] }
predicates = "3.1"
rand = "0.8"
rayon = "1.10"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "stream", "multipart"] }
scraper = "0.21"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serial_test = "3.2"
md-5 = "0.10"
sha2 = "0.10"
sophia = "0.8"
sophia_api = "0.8"
sophia_inmem = "0.8"
sophia_jsonld = "0.8"
sophia_turtle = "0.8"
sophia_xml = "0.8"
sqlx = "0.8"
strsim = "0.11"
thiserror = "2.0"
tiktoken-rs = "0.6"
serde_json = "1"
tempfile = "3"
texting_robots = "0.2"
tokenizers = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = { version = "=0.32", default-features = false, features = ["tracing-log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
uuid = { version = "1.21", features = ["v4", "v5", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

# Project rule made enforceable: "no unwrap()/expect() in non-test code"
# (.claude/CLAUDE.md → Coding Conventions). Test modules re-allow these.
# Sanctioned lock-guard unwraps carry a local
# #[allow(clippy::unwrap_used, reason = "lock poison is unrecoverable")].
# TODO(task-23): bump both to "deny" once all non-test sites are annotated.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.dev.package."*"]
# At opt-level=0 (dev default), LLVM emits very large unoptimized IR for every
# dependency. Level 1 enables constant-folding and dead-code elimination without
# full optimization, which typically halves the size of dependency artifacts.
# This does not affect workspace-member crates (they stay at opt-level=0 so
# debug builds remain fast), only external dependencies (lbug, qdrant, ort, …).
opt-level = 1

[profile.release]
# "line-tables-only" gives backtraces and profiler source-line info at a
# fraction of the size of full debug info (debug = true).
debug = "line-tables-only"
