[package]
name = "cognee-examples"
version.workspace = true
edition.workspace = true
publish = false

# Define each example
[[example]]
name = "add_example"
path = "add_example.rs"

[[example]]
name = "cognify_example"
path = "cognify_example.rs"

[[example]]
name = "fact_extraction_example"
path = "fact_extraction_example.rs"

[[example]]
name = "summarization_example"
path = "summarization_example.rs"

[[example]]
name = "embedding_engine_example"
path = "embedding_engine_example.rs"

[[example]]
name = "url_ingestion"
path = "url_ingestion.rs"

[dependencies]
# Workspace crates
cognee-core = { path = "../crates/core", features = ["pipeline-run-registry"] }
cognee-storage = { path = "../crates/storage" }
cognee-database = { path = "../crates/database" }
cognee-graph = { path = "../crates/graph", features = ["testing"] }
cognee-ingestion = { path = "../crates/ingestion" }
cognee-models = { path = "../crates/models" }
cognee-chunking = { path = "../crates/chunking" }
cognee-cognify = { path = "../crates/cognify" }
cognee-llm = { path = "../crates/llm" }
cognee-embedding = { path = "../crates/embedding", features = ["onnx"] }
cognee-vector = { path = "../crates/vector", features = ["testing"] }

tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
env_logger.workspace = true
