[package]
name = "cognee-python"
version.workspace = true
edition.workspace = true

[lib]
name = "cognee_pipeline"
crate-type = ["cdylib"]
# This crate is a PyO3 extension module (`pyo3/extension-module`): it is built
# as a cdylib whose Python symbols are resolved at runtime by the interpreter,
# so libpython is intentionally not linked. A Rust test harness (`cargo test` /
# `cargo nextest run --workspace`) would link a standalone binary and fail with
# "undefined symbol: Py*". The crate's behaviour is covered by pytest via
# `python/scripts/check.sh` (the `python-check` CI job), so disable the Rust
# unit-test and doctest harnesses here. Sibling native crates (js/cognee-neon,
# capi) sidestep this by not being workspace members; this crate is a member
# (for `cargo check --all-targets` coverage), hence the explicit opt-out.
test = false
doctest = false

[features]
# Mirror cognee-neon's default feature set (js/cognee-neon/Cargo.toml).
default = [
    "visualization",
    "cloud",
    "qdrant",
    "ladybug",
    "onnx",
    "hf-tokenizer",
    "tiktoken",
    "sqlite",
    "testing",
]
visualization = ["cognee-lib/visualization", "cognee-bindings-common/visualization"]
cloud         = ["cognee-lib/cloud",         "cognee-bindings-common/cloud"]
qdrant        = ["cognee-lib/qdrant",        "cognee-bindings-common/qdrant"]
ladybug       = ["cognee-lib/ladybug",       "cognee-bindings-common/ladybug"]
onnx          = ["cognee-lib/onnx",          "cognee-bindings-common/onnx"]
hf-tokenizer  = ["cognee-lib/hf-tokenizer",  "cognee-bindings-common/hf-tokenizer"]
tiktoken      = ["cognee-lib/tiktoken",      "cognee-bindings-common/tiktoken"]
sqlite        = ["cognee-lib/sqlite",        "cognee-bindings-common/sqlite"]
testing       = ["cognee-lib/testing",       "cognee-bindings-common/testing"]

[dependencies]
# Shared SDK facade (HandleState, CogneeServices, SdkError).
cognee-bindings-common = { path = "../crates/bindings-common", default-features = false }
# Full cognee SDK — same feature set as cognee-neon.
cognee-lib = { path = "../crates/lib", default-features = false }
serde_json = { workspace = true }
# bytes/bytearray → base64 in py_to_serde (wire::marshal_bytes expects base64).
base64 = { workspace = true }

cognee-core = { path = "../crates/core" }
cognee-database = { path = "../crates/database", features = ["sqlite"] }
cognee-graph = { path = "../crates/graph", features = ["testing"] }
cognee-vector = { path = "../crates/vector", features = ["testing"] }
cognee-logging = { path = "../crates/logging" }
# Bridge Rust `tracing` events into Python `logging` (gap 07 decision 5).
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log        = "0.2"
pyo3-log           = "0.12"
log                = "0.4"

# Optional opentelemetry / send_telemetry surfaces. Both have noop
# bodies when the `telemetry` feature is off, so the binding can
# still build under `--no-default-features` once feature wiring is
# in place (out of scope for v1 — feature is on by default here per
# gap 07 decision 3).
cognee-observability = { path = "../crates/observability", features = ["telemetry"] }
cognee-telemetry     = { path = "../crates/telemetry",     features = ["telemetry"] }
pyo3 = { version = "0.23", features = ["extension-module", "multiple-pymethods"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
